--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-basic-auth": "^1.2.0",
-        "homie-sdk": "github:2SmartCloud/2smart-standalone-homie-sdk",
+        "homie-sdk": "^1.0.0",
         "json-pointer": "^0.6.0",
         "livr": "^2.3.1",
         "livr-extra-rules": "^1.2.1",
@@ -28,7 +28,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com:2SmartCloud/2smart-standalone-rest-adapter-bridge.git"
+        "url": "git@github.com:2SmartCloud/2smartdev/2smart-standalone-rest-adapter-bridge.git"
     },
     "author": "2Smart",
     "devDependencies": {
